plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.sonarqube' version '7.5.0.8588'
}

group = 'com.dongsoop'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jacoco {
    toolVersion = '0.8.15'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

def querydslDir = layout.buildDirectory.dir("generated/sources/annotationProcessor/java/main").get().asFile

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(querydslDir)
}

sourceSets {
    main.java.srcDirs += [querydslDir]
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.github.napstr:logback-discord-appender:1.0.0'
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

    // mail sender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'

    // Elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    runtimeOnly 'org.postgresql:postgresql'
    
    developmentOnly 'com.h2database:h2'
    testRuntimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation "org.testcontainers:postgresql:1.19.0"
    testImplementation "org.testcontainers:junit-jupiter:1.19.0"
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

tasks.named('jar') {
    enabled = false
}

sonar {
    properties {
        property 'sonar.exclusions', 'build/generated/**'

        // S4502(CSRF 비활성화)는 이 프로젝트에 해당하지 않는다. 사유는 SecurityConfig 주석 참고
        property 'sonar.issue.ignore.multicriteria', 'csrfDisabled'
        property 'sonar.issue.ignore.multicriteria.csrfDisabled.ruleKey', 'java:S4502'
        property 'sonar.issue.ignore.multicriteria.csrfDisabled.resourceKey', '**/SecurityConfig.java'

        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
    }
}

clean.doLast {
    file(querydslDir).deleteDir()
}
